deployment-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodejs-app
  labels:
    app: nodejs-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: ${dockerHubUsername}/nodejs-app:v1
          ports:
            - containerPort: 80
              name: nodejs-app
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nodejs-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodejs-service-nodeport
              port:
                number: 80
